--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,66 @@
-.App {
+:root{
+  background-color: black;
+
+}
+
+.app{
   text-align: center;
+  background-color: black;
+  color: white;
+  height: 100vh
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+h3{
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.board{
+  display: grid;
+  margin: auto;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  width: 50%;
+  height: 600px;
+  gap: 10px;
+  color: black;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.square1{
+  grid-column-start: 1;
+  grid-row-start: 1;
+}
+.square2{
+  grid-column-start: 2;
+  grid-row-start: 1;
+}
+.square3{
+  grid-column-start: 3;
+  grid-row-start: 1;
+}
+.square4{
+  grid-column-start: 1;
+  grid-row-start: 2;
+}
+.square5{
+  grid-column-start: 2;
+  grid-row-start: 2;
+}
+.square6{
+  grid-column-start: 3;
+  grid-row-start: 2;
+}
+.square7{
+  grid-column-start: 1;
+  grid-row-start: 3;
+}
+.square8{
+  grid-column-start: 2;
+  grid-row-start: 3;
+}
+.square9{
+  grid-column-start: 3;
+  grid-row-start: 3;
+}
+.button{
+height: 200px;
+width: 100%;
+background-color: white;
+font-size: 24px;
 }
